Add a new prompt and more skills